# rcanary

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh
librcanary/: Cargo.toml
librcanary/src/: lib.rs
src/: alert.rs  main.rs  ws_handler.rs
src/alerter/: alert.rs  email.rs  mod.rs
src/checkengine/: http.rs  mod.rs  tcp.rs
src/checkengine/http/: hyper_helpers.rs  mod.rs
src/dashboard/: .eslintrc  index.html
src/dashboard/css/: rcanary.css
src/dashboard/js/: rcanary.js
src/metrics/: mod.rs  prometheus.rs
test/fixtures/: config.toml
tests/fixtures/: config.toml
