[package]
name = "rcanary"
version = "0.5.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]
edition = "2018"

[[bin]]
name = "rcanary"
path = "src/main.rs"
test = true

[dependencies]
base64 = "0.11"
docopt = "1.1.0"
env_logger = "0.7"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }
futures01 = { package = "futures", version = "0.1" }
http = "0.1"
hyper = "0.12.29"
hyper-tls = "0.3.2"
lazy_static = "1.4.0"
lettre = { version = "0.9.2", git = "https://github.com/lettre/lettre", rev = "d2675fab82e1ec0381ae2a56947532f6e154cb98" }
librcanary = { path = "librcanary" }
log = "0.4"
native-tls = "0.2.2"
prometheus = "0.7.0"
rouille = "3.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.40"
time = "0.1"
tokio = "0.1"
toml = "0.5"
url = "2.1.0"
ws = "0.9.1"
protobuf = "2.6.1"

[workspace]
